Adding code for the Bulk Export ECS tasks to consume messages and process them.